# first-inheritance

./: CMakeLists.txt  README.md
inc/: box.h  circle.h  cube.h  inheritance.h  pyramid.h  rectangle.h  shape.h  shape2d.h  shape3d.h  sphere.h  square.h  triangle.h
scripts/: setup.sh  update.sh
src/: CMakeLists.txt  box.cpp  circle.cpp  cube.cpp  rectangle.cpp  shape.cpp  shape2d.cpp  shape3d.cpp  sphere.cpp  square.cpp  triangle.cpp
test/: CMakeLists.txt  advanced.cpp  basic.cpp  expert.cpp  intermediate.cpp
